add new version

--- a/main.html
+++ b/main.html
@@ -6,5 +6,10 @@
   </head>
   <body>
     This is Main.html
+
+    <!-- the following code is for new version -->
+    <p>
+      Here is new version!
+    </p>
   </body>
 </html>
