--- a/main.html
+++ b/main.html
@@ -6,10 +6,7 @@
   </head>
   <body>
     This is Main.html
-
-    <!-- the following code is for new version -->
-    <p>
-      Here is new version!
-    </p>
+    <!--syntax error-->
+    <strong> error 
   </body>
 </html>
