add span with: fixed bugs

--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
   <body>
     This is Main.html
     <!--syntax error-->
-    <strong> error 
+    <span>Fixed bugs and now there is no bugs!!!</span>
+    <strong> error
   </body>
 </html>
