added new version section

--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
     This is Main.html
     <!--syntax error-->
     <span>Fixed bugs and now there is no bugs!!!</span>
+    <!-- new version -->
+    <span>This is new version!!!</span>
     <strong> error
   </body>
 </html>
